Validacion de campos y errores

--- a/respawnReviews/respawnReviews/src/main/resources/application.properties
+++ b/respawnReviews/respawnReviews/src/main/resources/application.properties
@@ -13,15 +13,14 @@ spring.jpa.hibernate.ddl-auto=create-drop
 # spring.jpa.show-sql=true
 
 spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+spring.h2.console.path=/database
 
 # Spring Security
 
-spring.security.user.name=carlos
-spring.security.user.password=12345
+spring.security.user.name=name
+spring.security.user.password=password
 
 logging.level.org.springframework.security=DEBUG
-
 
 
 #Variables de entorno
